# etlp

./: .gitignore  .rustfmt.toml  .rustlint.toml  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: build-app-release.yml  build-binary-release.yml  build-linux-amd64-app.yml  build-linux-amd64-binary.yml  build-linux-arm64-binary.yml  build-macos-amd64-app.yml  build-macos-amd64-binary.yml  build-macos-arm64-app.yml  build-macos-arm64-binary.yml  build-release.yaml  build-windows-amd64-app.yml  build-windows-amd64-binary.yml  build-windows-portable.yml  ci-app.yml  ci-rust.yaml  ci-rust.yml
assets/userscripts/: README.md  README.zh-CN.md  etlp.user.js
crates/etlp/: Cargo.toml
crates/etlp-config/: Cargo.toml
crates/etlp-config/src/: lib.rs  matching.rs
crates/etlp-core/: Cargo.toml
crates/etlp-core/src/: agent.rs  error.rs  lib.rs  media.rs  playback.rs  player.rs
crates/etlp-download/: Cargo.toml
crates/etlp-download/src/: downloader.rs  lib.rs  lock.rs  manager.rs  prefetch.rs
crates/etlp-logging/: Cargo.toml
crates/etlp-logging/src/: lib.rs  mask.rs  rotate.rs
crates/etlp-media-server/: Cargo.toml
crates/etlp-media-server/src/: alternate.rs  dto.rs  emby.rs  episodes.rs  lib.rs  list_episodes.rs  meta.rs  parse.rs  path_map.rs  playlist.rs  plex.rs  prefer.rs  received.rs  resolve.rs  stream_url.rs  subtitle.rs  version.rs  version_filter.rs
crates/etlp-media-server/tests/fixtures/: episodes.json  playback_info.json
crates/etlp-metrics/: Cargo.toml
crates/etlp-metrics/src/: lib.rs
crates/etlp-net/: Cargo.toml
crates/etlp-net/src/: client.rs  lib.rs  progress.rs  redirect.rs  url_tools.rs
crates/etlp-player/: Cargo.toml
crates/etlp-player/src/: dandan.rs  executable.rs  lib.rs  mpc.rs  mpv.rs  player_manager.rs  pot.rs  protocol.rs  transport.rs  vlc.rs
crates/etlp-server/: Cargo.toml
crates/etlp-server/src/: error.rs  lib.rs  router.rs  state.rs
crates/etlp-server/src/platform/: device_id.rs  dirs.rs  kill.rs  mod.rs  path.rs
crates/etlp-server/src/routes/: download.rs  media.rs  mod.rs  play.rs  util.rs
crates/etlp-server/tests/: smoke.rs
crates/etlp-sync/: Cargo.toml
crates/etlp-sync/src/: bangumi.rs  bangumi_map.rs  bangumi_web.rs  curl.rs  error.rs  lib.rs  tmdb.rs  trakt.rs
crates/etlp-updater/: Cargo.toml
crates/etlp-updater/src/: main.rs
crates/etlp/src/: cli.rs  main.rs
etlp-gui/: .gitignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json
etlp-gui/src/: App.tsx  display.ts
etlp-gui/src-tauri/: Cargo.toml  default_config.toml  installer-hooks.nsh  tauri.conf.json  tauri.macos.conf.json
etlp-gui/src-tauri/capabilities/: default.json
etlp-gui/src-tauri/icons/: icon-macos-rounded.icns  icon.icns
etlp-gui/src-tauri/locales/uk.lproj/: InfoPlist.strings
etlp-gui/src-tauri/locales/zh-Hans.lproj/: InfoPlist.strings
etlp-gui/src-tauri/src/: backup.rs  commands.rs  config_patch.rs  elevated_fs.rs  lib.rs  main.rs
etlp-gui/src/components/: ErrorBoundary.tsx
etlp-gui/src/hooks/: usePlatform.ts
etlp-gui/src/i18n/: ar.ts  de.ts  en.ts  es.ts  fr.ts  he.ts  id.ts  index.ts  index.tsx  it.ts  ja.ts  ko.ts  pl.ts  provider.tsx  pt.ts  ru.ts  sk.ts  sr.ts  th.ts  tr.ts  uk.ts  zh-CN.ts  zh-TW.ts
etlp-gui/src/pages/: Logs.tsx  Overview.tsx  Settings.tsx
etlp-gui/src/styles/: global.css
scripts/: build-app.sh  build-binary.sh  build-linux-app.sh  build-linux-binary.sh  build-macos-app.sh  build-macos-binary.sh  build-windows-app.sh  build-windows-binary.sh  build-windows-portable.sh  build.sh  check-file-lines.sh  ci-rust-file-lines.yml  gen-changelog.sh  gen-macos-rounded-icns.py  gen-tray-icons.py  gen-windows-rounded-icons.py  lint.sh  release.sh  run-silent.vbs  run.bat  run.sh
