[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
authors = ["PiliPili Team"]
repository = "https://github.com/PiliPili-Team"
description = "embyToLocalPlayer rewritten in Rust"

# Shared dependency versions so member crates stay in lockstep.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
axum = "0.7"
rust-ini = "0.21"
url = "2"
fs4 = "0.13"
sysinfo = "0.33"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
http = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

# Deny crash-prone and sloppy patterns workspace-wide. Member crates opt in via
# `[lints] workspace = true`. Test code re-allows these locally where needed.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
indexing_slicing = "deny"
todo = "deny"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
