[package]
name = "etlp-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "INI configuration loading and match rules for etlp"

[lints]
workspace = true

[dependencies]
etlp-core = { path = "../etlp-core" }
rust-ini = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
