[package]
name = "etlp-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TOML configuration loading and match rules for etlp"

[lints]
workspace = true

[dependencies]
etlp-core = { path = "../etlp-core" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
