[package]
name = "etlp-download"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP range downloader and download manager for etlp"

[lints]
workspace = true

[dependencies]
etlp-core = { path = "../etlp-core" }
etlp-net = { path = "../etlp-net" }
etlp-media-server = { path = "../etlp-media-server" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile.workspace = true
wiremock = "0.6"
