[package]
name = "etlp-logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tracing setup with secret masking for etlp"

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
