[package]
name = "etlp-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP client, redirect cache and progress write-back for etlp"

[lints]
workspace = true

[dependencies]
etlp-core = { path = "../etlp-core" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
url = "2"
percent-encoding = "2"

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
