[package]
name = "etlp-player"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Media player launch and control (mpv IPC, vlc, ...) for etlp"

[lints]
workspace = true

[dependencies]
etlp-core = { path = "../etlp-core" }
etlp-net  = { path = "../etlp-net" }
reqwest.workspace   = true
serde.workspace     = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace     = true
tracing.workspace   = true

[dev-dependencies]
tokio    = { workspace = true }
wiremock = "0.6"
