[package]
name = "etlp-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Trakt and Bangumi watch-history sync for etlp"

[lints]
workspace = true

[dependencies]
etlp-core = { path = "../etlp-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
tempfile.workspace = true
