[package]
name = "etlp-updater"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Windows Portable updater helper binary"

[[bin]]
name = "updater"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
sysinfo = { workspace = true }

[lints]
workspace = true
