[package]
name = "etlp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "etlp CLI binary – media-player bridge for Emby, Jellyfin and Plex"

[[bin]]
name = "etlp"
path = "src/main.rs"

[dependencies]
etlp-server     = { path = "../etlp-server" }
etlp-config     = { path = "../etlp-config" }
etlp-logging    = { path = "../etlp-logging" }
etlp-net        = { path = "../etlp-net" }
etlp-download   = { path = "../etlp-download" }
etlp-sync       = { path = "../etlp-sync" }
axum.workspace       = true
tower.workspace      = true
tower-http.workspace = true
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
tracing.workspace    = true
clap.workspace       = true
reqwest = { workspace = true }

[lints]
workspace = true
