# Declare an isolated workspace so Cargo does not merge this crate into the
# parent etlp workspace when invoked from inside this directory.
[workspace]
resolver = "3"

[package]
name = "etlp-gui"
version = "0.0.16"
edition = "2024"
rust-version = "1.89"
license = "MIT"
authors = ["PiliPili Team"]
description = "GUI frontend for etlp powered by Tauri v2"

[lib]
name = "etlp_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tracing = "0.1"
dirs = "6"
toml_edit = "0.25"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["normalize-path"] }
image = { version = "0.25", default-features = false, features = ["png"] }
ttf-parser = "0.25"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
window-vibrancy = "0.6"
sys-locale = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

etlp-core    = { path = "../../crates/etlp-core" }
etlp-config  = { path = "../../crates/etlp-config" }
etlp-logging = { path = "../../crates/etlp-logging" }
etlp-net     = { path = "../../crates/etlp-net" }
etlp-download = { path = "../../crates/etlp-download" }
etlp-server  = { path = "../../crates/etlp-server" }
etlp-sync    = { path = "../../crates/etlp-sync" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
